# UAMMD

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  .readthedocs.yaml  BDHI_FCMRot.cu  BDHI_FCMRot.cuh  CHANGELOG.txt  CITATION.cff  CMakeLists.txt  Makefile  README.md  compile_flags.txt  environment.yml
examples/: BD.cu  BDHI.cu  Bonds.cu  CMakeLists.txt  DPD.cu  FCM.cu  FIB.cu  LBM.cu  LJ.cu  LJMultipleTypes.cu  MCNVT.cu  Makefile  NeighbourListIterator.cu  PSE.cu  ParameterUpdatable.cu  Poisson.cu  README.md  SPH_test.cu  benchmark.cu  customPotentials.cu  dambreak.cu  data.main.lbm  data.main.q2D  error_handling.cu  logo.cu  nvt.cu  q2D.cu  readInput.cu  temporary_memory.cu
examples/advanced/: CMakeLists.txt  Makefile  NeighbourListIterator.cu  ParameterUpdatable.cu  customPotentials.cu  error_handling.cu  execution_policy.cu  signals.cu  temporary_memory.cu
examples/basic_concepts/: 1-system.cu  10-initial_configuration.cu  11-measuring_things.cu  12-your-first-integrator.cu  13-your-first-interactor.cu  2-hello_world.cu  3-more_system.cu  4-uammd_types.cu  5-particle_data.cu  6-particle_data2.cu  7-moving_particles.cu  8-interacting_particles.cu  9-reading_parameters.cu  CMakeLists.txt  Makefile  README.md
examples/generic_md/: CMakeLists.txt  Makefile  README.md  customizations.cuh  generic_simulation.cu
examples/hydroGridAnalysis/: Makefile  hydroGridAnalysis.cu  hydroGridOptions.nml
examples/integration_schemes/: BD.cu  CMakeLists.txt  DPD.cu  LBM.cu  Makefile  SPH_test.cu  icm.cu  integrators.cu
examples/integration_schemes/others/: BDHI.cu  CMakeLists.txt  FCM.cu  MCNVT.cu  Makefile  SPH_test.cu  q2D.cu
examples/interaction_modules/: Bonds.cu  CMakeLists.txt  DoublyPeriodicPoisson.cu  Makefile  Poisson.cu  README.md  external.cu
examples/misc/: CMakeLists.txt  LJ.cu  LJMultipleTypes.cu  Makefile  SPH_test.cu  benchmark.cu  checkpoint.cu  dambreak.cu  logo.cu
examples/misc/hydroGridAnalysis/: hydroGridAnalysis.cu
examples/uammd_as_a_library/: CMakeLists.txt  Makefile  bak_neighbour_list.cu  electrostatic_forces.cu  neighbour_list.cu  python_wrapper.cu  wrapper.py
test/: CMakeLists.txt  README.md
test/BD/: BD.cu  Makefile  RepulsivePotential.cuh  SoftPotential.cuh  test.bash  testRDF.bash
test/BDHI/DPStokes/: CMakeLists.txt  DPStokes.cu  Makefile  README.org  data.main  dpstokes_test.cu
test/BDHI/FCM/: CMakeLists.txt  FCM.cu  Makefile  fcm_test.cu  test.bash
test/BDHI/FCM/Rotational Movement/: Params.data  compile  testFCM.cu
test/BDHI/FCM/tools/: ewaldSumRPY.f90  msd.cpp  noiseVariance.par  pairMobilityScaling.par  selfDiffusion_q2D.par  selfMobility.par  selfMobility_q2D.par
test/BDHI/FIB/: FIB.cu  Makefile  test.bash
test/BDHI/FIB/tools/: Timer.cpp  Timer.h  ewaldSumRPY.f90  fcmMobility.cpp  msd.cpp  noiseVariance.par  pairMobility.par  selfDiffusion.par  selfDiffusionCubicBox.par  selfMobility.par
test/BDHI/Lanczos_Cholesky/: BDHI.cu  Makefile  process.cpp  test.bash
test/BDHI/PSE/: CMakeLists.txt  Makefile  PSE.cu  pse_test.cu  test.bash
test/BDHI/PSE/tools/: ewaldSumRPY.f90  noiseVariance.par  pairMobility.par  selfDiffusion.par  selfMobility.par
test/BDHI/quasi2D/: CMakeLists.txt  Makefile  q2D.cu  quasi2d_test.cu  test.bash
test/Bonds/: AngularBond.cu  Bonds.cu  Makefile  TorsionalBonds.cu  angular.bonds  data.main  harmonic.bonds  init.pos  test.bash  torsional.bonds
test/Hydro/ICM_Compressible/: Makefile  README.md  computeStructureFactor.cuh  data.main  data.main.diffusion  data.main.rdf  data.main.wall  impedance_test.bash  particleDiffusionTest.bash  particleDiffusionTest.cu  particles.cu  plots.tar.xz  radialDistributionTest.bash  structureFactorTest.bash  structureFactorTest.cu  test.bash  test.cu  tools.tar.xz  walltest.bash  walltest.cu
test/Hydro/ICM_Compressible/extratools/: impedance.bash  impedance.cpp  printWallTheory.bash  splitVeldat.bash  walltheory.cpp
test/Languevin/DPD/: CMakeLists.txt  testDPDIntegrator.cu
test/Languevin/SPH/: CMakeLists.txt  testSPHIntegrator.cu
test/MC/: Makefile  MonteCarlo.cu  test.bash
test/MC/ForceBiased/: ForceBiased.cu  Makefile  test.bash
test/MC/ShortRange/: Makefile  MonteCarlo.cu  test.bash
test/MC/ShortRange/tools/: pressure.sh
test/MC/tools/: eq_state.par
test/MC/tools/Lennard_Jones_eqstate/: lj_eq_state.f
test/MD/: Langevin.cu  Makefile  test.bash
test/MD/tools/: eos.sh  lj_eos.cpp  pressure.sh
test/MD/tools/Lennard_Jones_eqstate/: eos.sh  param_lj.inc
test/Potentials/DPD/: CMakeLists.txt  test_dpd.cu
test/Potentials/Deserno/: Deserno.cu  Makefile  data.main  init.tar.xz  test.bash
test/Potentials/Poisson/: CMakeLists.txt  Makefile  Poisson.cu  test.bash
test/Potentials/Poisson/DoublyPeriodic/: CMakeLists.txt  Makefile  Poisson.cu  PoissonSlab.cu  README.md  RepulsivePotential.cuh  data.main  test_dp_quadrupole.cu  test_poisson.cu
test/Potentials/Poisson/DoublyPeriodic/charged_wall/: README.md  data.main  test.bash
test/Potentials/Poisson/DoublyPeriodic/tools/: MSE.sh  do_histo.sh  histoawk.bash  init.sh
test/Potentials/Poisson/DoublyPeriodic/uncharged_wall/: README.md  data.main  (+2 more)
test/Potentials/Poisson/PunctualQuadrupole/: CMakeLists.txt  test_quadrupole.cu
test/Potentials/Poisson/TriplyPeriodic/: CMakeLists.txt  Makefile  Poisson.cu  test.bash  test_poisson.cu  test_tp_quadrupole.cu
test/Potentials/Poisson/common/: PunctualQuadrupole.cuh  quadrupole_test_base.cuh
test/Potentials/Poisson/newDoublyPeriodic/: CMakeLists.txt  test_doublyperiodic_poisson.cu
test/Potentials/Poisson/rdftest/: Makefile  SoftPotential.cuh  testRDF.bash
test/misc/bvp/: CMakeLists.txt  Makefile  README.org  bvp.cu  bvp.m  data.main  test.sh  test_bvp.cu
test/misc/bvp/matlab/: BCRows.m  BVPChebInt.m  secondIntegralMatrix.m
test/misc/chebyshev/: CMakeLists.txt  fastChebyshevTransform.cu
test/misc/ibm/: CMakeLists.txt  Makefile  README.org  ibm.cu  test_ibm.cu  test_ibm_regular.cu  utils.cuh
test/misc/lanczos/: CMakeLists.txt  README.org  lanczos_test.cu  test_lanczos.cu
test/utils/: CMakeLists.txt  ParticleSorter.cu
(+427 files in other folders)
