cmake_minimum_required(VERSION 3.22)
project(examples)
enable_language(CUDA)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/../cmake/")
set(CMAKE_BUILD_TYPE Release)
message(${CMAKE_MODULE_PATH})
find_package(UAMMD REQUIRED)
find_package(BLAS REQUIRED)
# #add_compile_definitions(PUBLIC MAXLOGLEVEL=15)
# #add_compile_definitions(PUBLIC DOUBLE_PRECISION)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CUDA_STANDARD 14)
add_subdirectory(generic_md)
add_subdirectory(advanced)
add_subdirectory(basic_concepts)
add_subdirectory(integration_schemes)
add_subdirectory(integration_schemes/others)
add_subdirectory(interaction_modules)
add_subdirectory(misc)
add_subdirectory(uammd_as_a_library)


IF (CMAKE_BUILD_TYPE MATCHES "Debug")
  if(CMAKE_CUDA_COMPILER_ID STREQUAL "NVIDIA")
    set(CMAKE_CUDA_FLAGS "-g -G  -lineinfo -src-in-ptx -Wall -Wextra -pedantic")
  else()
    set(CMAKE_CUDA_FLAGS "-g")
  endif()
 set(CMAKE_CXX_FLAGS "-g -Wall -Wextra -pedantic")
ENDIF()
