cmake_minimum_required(VERSION 3.22)
project(tests)
enable_language(CUDA)
add_compile_definitions(PUBLIC MAXLOGLEVEL=1)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/../cmake/")
set(CMAKE_BUILD_TYPE Release)
find_package(UAMMD REQUIRED)
add_compile_definitions(PUBLIC DOUBLE_PRECISION)
include(FetchContent)
FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG v1.16.0
)
FetchContent_MakeAvailable(googletest)
enable_testing()
include(CTest)
add_subdirectory(BDHI/DPStokes)
add_subdirectory(BDHI/FCM)
add_subdirectory(BDHI/PSE)
add_subdirectory(BDHI/quasi2D)
add_subdirectory(Potentials/Poisson/DoublyPeriodic)
add_subdirectory(Potentials/Poisson/TriplyPeriodic)
add_subdirectory(utils)
add_subdirectory(misc/chebyshev)
add_subdirectory(misc/ibm)
add_subdirectory(misc/bvp)
add_subdirectory(misc/lanczos)

IF (CMAKE_BUILD_TYPE MATCHES "Debug")
  if(CMAKE_CUDA_COMPILER_ID STREQUAL "NVIDIA")
    set(CMAKE_CUDA_FLAGS "-g -G  -lineinfo -src-in-ptx")
  else()
    set(CMAKE_CUDA_FLAGS "-g")
  endif()
 set(CMAKE_CXX_FLAGS "-g -Wall -Wextra -pedantic")
ENDIF()
