find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
find_package(pybind11 CONFIG REQUIRED)
add_executable(neighbour_list neighbour_list.cu )
add_executable(electrostatic_forces electrostatic_forces.cu)
target_link_libraries(electrostatic_forces cufft)
pybind11_add_module(python_wrapper python_wrapper.cu)
set_target_properties(python_wrapper PROPERTIES CUDA_ARCHITECTURES OFF)
target_link_libraries(python_wrapper PRIVATE pybind11::embed)
target_include_directories(python_wrapper PRIVATE ${Python3_INCLUDE_DIRS})
file(GLOB SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cu )
foreach( testsourcefile ${SOURCES} )
    # I used a simple string replace, to cut off .cpp.
    string( REPLACE ".cu" "" testname ${testsourcefile} )
    set_target_properties(${testname} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
endforeach( testsourcefile ${SOURCES} )
